Chore: Swagger config